[CONTINUUM-531] Add back the "build now" button on the "view project" page.
git-svn-id: https://svn.apache.org/repos/asf/maven/continuum/branches/continuum-1.0.x@376455 13f79535-47bb-0310-9956-ffa450edef68

--- a/continuum-web/src/main/resources/templates/screens/View.vm
+++ b/continuum-web/src/main/resources/templates/screens/View.vm
@@ -50,6 +50,10 @@ $page.setTitle( "Continuum - Project View: ${item.name}" )
               <form method="post" action="$link.setPage('Edit.vm').addPathInfo('fid', "$!{item.executorId}Project").addPathInfo('id', $item.id)">
                 <input type="submit" name="edit-project" value="Edit"/>
               </form>
+              &nbsp;
+              <form method="post" action="$link.addPathInfo('action', 'cam').addPathInfo('cid','buildProject').addPathInfo('id', $item.id)">
+                <input type="submit" name="build-project" value="Build Now"/>
+              </form>
             </td>
           </tr>
         </table>
