[CONTINUUM-537] Allow guest to see totals if he can't build projects
git-svn-id: https://svn.apache.org/repos/asf/maven/continuum/branches/continuum-1.0.x@376468 13f79535-47bb-0310-9956-ffa450edef68

--- a/continuum-web/src/main/resources/templates/screens/Summary.vm
+++ b/continuum-web/src/main/resources/templates/screens/Summary.vm
@@ -130,6 +130,13 @@ $page.setTitle( "Continuum" )
         #end
       </form>
     </div>
+    #else
+    <div class="functnbar3">
+        <img src="/continuum/images/icon_success_sml.gif" alt="Success" title="Success"/> $success
+        <img src="/continuum/images/icon_warning_sml.gif" alt="Failed" title="Failed"/> $failures
+        <img src="/continuum/images/icon_error_sml.gif" alt="Error" title="Error"/> $errors
+      </form>
+    </div>
     #end
   </div>
 </div>
