--- a/continuum-web/src/main/resources/templates/screens/View.vm
+++ b/continuum-web/src/main/resources/templates/screens/View.vm
@@ -10,12 +10,12 @@ $page.setTitle( "Continuum - Project View: ${item.name}" )
 
   #if ( $continuum.security.isAuthorized( $c1user, "showProject" ) )
   <div>
-    <p style="border-top: 1px solid transparent; border-bottom: 1px solid black;">
-      <b style="border: 1px solid black; padding-left: 1em; padding-right: 1em;">Info</b>
+    <p style="border-top: 1px solid transparent; border-bottom: 1px solid #DFDEDE;">
+      <b style="border: 1px solid #DFDEDE; padding-left: 1em; padding-right: 1em;">Info</b>
       #set ( $buildsLink = $link.setPage('ProjectBuilds.vm').addPathInfo('view', "ProjectBuilds").addPathInfo('id', $item.id) )
-      <a style="border: 1px solid black; padding-left: 1em; padding-right: 1em; text-decoration:none;" href="$buildsLink">Builds</a>
+      <a style="border: 1px solid #DFDEDE; padding-left: 1em; padding-right: 1em; text-decoration: none;" href="$buildsLink">Builds</a>
       #set ( $workingCopy = $link.setPage('WorkingCopy.vm').addPathInfo('view', "WorkingCopy").addPathInfo('id', $item.id) )
-      <a style="border: 1px solid black; padding-left: 1em; padding-right: 1em; text-decoration:none;" href="$workingCopy">Working&nbsp;Copy</a>
+      <a style="border: 1px solid #DFDEDE; padding-left: 1em; padding-right: 1em; text-decoration: none;" href="$workingCopy">Working&nbsp;Copy</a>
     </p>
   </div>
   #end
@@ -24,7 +24,8 @@ $page.setTitle( "Continuum - Project View: ${item.name}" )
     <h3>$i18n.getString( $form.view.titleKey )</h3>
 
     <div class="axial">
-      <table border="1" cellspacing="2" cellpadding="3" width="100%">
+      <table border="1" cellpadding="3" cellspacing="2" width="100%">
+        <tbody>
         <tr class="b">
           <th>$i18n.getString( "project.name.label" )</th>
           <td>$item.name</td>
@@ -41,10 +42,12 @@ $page.setTitle( "Continuum - Project View: ${item.name}" )
           <th>$i18n.getString( "project.group.label" )</th>
           <td>$item.projectGroup.name</td>
         </tr>
+        </tbody>
       </table>
       #if ( $continuum.security.isAuthorized( $c1user, "editProject" ) )
       <div class="functnbar3">
         <table>
+          <tbody>
           <tr>
             <td>
               <form method="post" action="$link.setPage('Edit.vm').addPathInfo('fid', "$!{item.executorId}Project").addPathInfo('id', $item.id)">
@@ -57,22 +60,23 @@ $page.setTitle( "Continuum - Project View: ${item.name}" )
               </form>
             </td>
           </tr>
+          </tbody>
         </table>
       </div>
       #end
     </div>
 
-    
     <h3>$i18n.getString( "project.buildDefinitions.label" )</h3>
-    <table border="1" cellspacing="2" cellpadding="3" width="100%">
+    <table border="1" cellpadding="3" cellspacing="2" width="100%">
+      <tbody>
       <tr>
-        <th>Goals</th>
-        <th>Arguments</th>
-        <th>POM File</th>
-        <th>Profile</th>
-        <th>Schedule</th>
-        <th>From</th>
-        <th width="10%">&nbsp;</th>
+        <th class="tablehead">Goals</th>
+        <th class="tablehead">Arguments</th>
+        <th class="tablehead">POM File</th>
+        <th class="tablehead">Profile</th>
+        <th class="tablehead">Schedule</th>
+        <th class="tablehead">From</th>
+        <th width="10%" class="tablehead">&nbsp;</th>
       </tr>
       #foreach ( $buildDefinition in $project.buildDefinitions )
       <tr class="$css.nextClass">
@@ -106,10 +110,12 @@ $page.setTitle( "Continuum - Project View: ${item.name}" )
         </td>
       </tr>
       #end
+      </tbody>
     </table>
     #if ( $continuum.security.isAuthorized( $c1user, "addBuildDefinition" ) )
     <div class="functnbar3">
       <table>
+        <tbody>
         <tr>
           <td>
             <form method="post" action="$link.setPage('AddBuildDefinition.vm').addPathInfo('view','BuildDefinition').addPathInfo('fid', 'buildDefinition').addPathInfo('id', $item.id).addPathInfo('executorId', $item.executorId)">
@@ -117,19 +123,21 @@ $page.setTitle( "Continuum - Project View: ${item.name}" )
             </form>
           </td>
         </tr>
+        </tbody>
       </table>
     </div>
     #end
     
     #if ( $project.notifiers )
     <h3>$i18n.getString( "project.notifiers.label" )</h3>
-    <table border="1" cellspacing="2" cellpadding="3" width="100%">
+    <table border="1" cellpadding="3" cellspacing="2" width="100%">
+      <tbody>
       <tr>
-        <th>Type</th>
-        <th>Recipient</th>
-        <th>Events</th>
-        <th>From</th>
-        <th width="10%">&nbsp;</th>
+        <th class="tablehead">Type</th>
+        <th class="tablehead">Recipient</th>
+        <th class="tablehead">Events</th>
+        <th class="tablehead">From</th>
+        <th width="10%" class="tablehead">&nbsp;</th>
       </tr>
       #foreach ( $notifier in $project.notifiers )
         <tr class="$css.nextClass" #if ( !$notifier.isEnabled() ) style="color: silver;" #end>
@@ -198,10 +206,12 @@ $page.setTitle( "Continuum - Project View: ${item.name}" )
           </td>
         </tr>
       #end
+      </tbody>
     </table>
     #if ( $continuum.security.isAuthorized( $c1user, "addNotifier" ) )
     <div class="functnbar3">
       <table>
+        <tbody>
         <tr>
           <td>
             <form method="post" action="$link.setPage('SelectNotifier.vm').addPathInfo('id', $project.id )">
@@ -209,6 +219,7 @@ $page.setTitle( "Continuum - Project View: ${item.name}" )
             </form>
           </td>
         </tr>
+        </tbody>
       </table>
     </div>
     #end
@@ -216,7 +227,8 @@ $page.setTitle( "Continuum - Project View: ${item.name}" )
 
     #if ( $project.dependencies )
     <h3>$i18n.getString( "project.dependencies.label" )</h3>
-    <table border="1" cellspacing="2" cellpadding="3" width="100%">
+    <table border="1" cellpadding="3" cellspacing="2" width="100%">
+      <tbody>
       <tr>
         <th>Name</th>
       </tr>
@@ -225,24 +237,28 @@ $page.setTitle( "Continuum - Project View: ${item.name}" )
         <td>$!{dependency.groupId}:$!{dependency.artifactId}:$!{dependency.version}</td>
       </tr>
       #end
+      </tbody>
     </table>
     #end
 
     <!--
     <h3>$i18n.getString( "project.usedBy.label" )</h3>
-    <table border="1" cellspacing="2" cellpadding="3" width="100%">
+    <table border="1" cellpadding="3" cellspacing="2" width="100%">
+      <tbody>
       <tr>
         <th>Name</th>
       </tr>
       <tr class="b">
         <td>&nbsp;</td>
       </tr>
+      </tbody>
     </table>
     -->
 
     #if ( $project.developers )
     <h3>$i18n.getString( "project.developers.label" )</h3>
-    <table border="1" cellspacing="2" cellpadding="3" width="100%">
+    <table border="1" cellpadding="3" cellspacing="2" width="100%">
+      <tbody>
       <tr>
         <th>Name</th>
         <th>Email</th>
@@ -255,10 +271,12 @@ $page.setTitle( "Continuum - Project View: ${item.name}" )
         <!-- td>&nbsp;</td -->
       </tr>
       #end
+      </tbody>
     </table>
     <!--
     <div class="functnbar3">
       <table>
+        <tbody>
         <tr>
           <td>
             <form method="post" action="$link">
@@ -266,6 +284,7 @@ $page.setTitle( "Continuum - Project View: ${item.name}" )
             </form>
           </td>
         </tr>
+        </tbody>
       </table>
     </div>
     -->
