--- a/continuum-web/src/main/resources/templates/screens/ConfigureContinuum.vm
+++ b/continuum-web/src/main/resources/templates/screens/ConfigureContinuum.vm
@@ -11,8 +11,8 @@ $page.setTitle( "Configure Continuum" )
     <h3>General Configuration</h3>
 
     <div class="axial">
-      <table border="1" cellspacing="2" cellpadding="3" width="100%">
-
+      <table border="1" cellpadding="3" cellspacing="2" width="100%">
+        <tbody>
         <tr class="b">
           <th>Guests</th>
           <td>
@@ -48,6 +48,7 @@ $page.setTitle( "Configure Continuum" )
           <th>Company URL</th>
           <td>#if ( $continuum.configuration.companyUrl ) $continuum.configuration.companyUrl #end</td>
         </tr>
+        </tbody>
       </table>
       #if ( $continuum.security.isAuthorized( $c1user, "manageConfiguration" ) )
       <div class="functnbar3">
