--- a/continuum-web/src/main/resources/templates/screens/ProjectBuilds.vm
+++ b/continuum-web/src/main/resources/templates/screens/ProjectBuilds.vm
@@ -10,25 +10,26 @@ $page.setTitle( "Continuum - ${project.name} Builds" )
 
   #if ( $continuum.security.isAuthorized( $c1user, "showProject" ) )
   <div>
-    <p style="border-top: 1px solid transparent; border-bottom: 1px solid black;">
+    <p style="border-top: 1px solid transparent; border-bottom: 1px solid #DFDEDE;">
       #set ( $infoLink = $link.setPage('View.vm').addPathInfo('fid', "$!{project.executorId}Project").addPathInfo('id', $project.id) )
-      <a style="border: 1px solid black; padding-left: 1em; padding-right: 1em; text-decoration:none;" href="$infoLink">Info</a>
-      <b style="border: 1px solid black; padding-left: 1em; padding-right: 1em;">Builds</b>
+      <a style="border: 1px solid #DFDEDE; padding-left: 1em; padding-right: 1em; text-decoration: none;" href="$infoLink">Info</a>
+      <b style="border: 1px solid #DFDEDE; padding-left: 1em; padding-right: 1em;">Builds</b>
       #set ( $workingCopy = $link.setPage('WorkingCopy.vm').addPathInfo('view', "WorkingCopy").addPathInfo('id', $project.id) )
-      <a style="border: 1px solid black; padding-left: 1em; padding-right: 1em; text-decoration:none;" href="$workingCopy">Working&nbsp;Copy</a>
+      <a style="border: 1px solid #DFDEDE; padding-left: 1em; padding-right: 1em; text-decoration: none;" href="$workingCopy">Working&nbsp;Copy</a>
     </p>
   </div>
   #end
 
   <h3>Build results for $project.name</h3>
   <p>
-    <table border="1" cellspacing="2" cellpadding="3" width="100%">
+    <table border="1" cellpadding="3" cellspacing="2" width="100%">
+      <tbody>
       <tr>
-        <th>Build #</th>
-        <th>Start Time</th>
-        <th>End Time</th>
-        <th>State</th>
-        <th></th>
+        <th class="tablehead">Build #</th>
+        <th class="tablehead">Start Time</th>
+        <th class="tablehead">End Time</th>
+        <th class="tablehead">State</th>
+        <th class="tablehead"></th>
       </tr>
       #foreach ( $build in $builds )
       <tr class="$css.nextClass">
@@ -39,6 +40,7 @@ $page.setTitle( "Continuum - ${project.name} Builds" )
         <td><a href="$link.setPage('ProjectBuild.vm').addQueryData('view','ProjectBuild').addQueryData('buildId',$build.id).addQueryData('id',$project.id)">Result</a></td>
       </tr>
       #end
+      </tbody>
     </table>
   </p>
 </div>
