--- a/continuum-web/src/main/resources/templates/screens/Users.vm
+++ b/continuum-web/src/main/resources/templates/screens/Users.vm
@@ -11,13 +11,14 @@ $page.setTitle( "Continuum - User Management" )
 <div class="app">
   <div id="h3">
     <h3>User Management</h3>
-    <table border="1" cellspacing="2" cellpadding="3" width="100%">
+    <table border="1" cellpadding="3" cellspacing="2" width="100%">
+      <tbody>
       <tr>
-        <th width="10%">$i18n.getString( "user.username.label" )</th>
-        <th width="10%">$i18n.getString( "user.fullName.label" )</th>
-        <th width="10%">$i18n.getString( "user.email.label" )</th>
-        <th width="10%">$i18n.getString( "user.groupName.label" )</th>
-        <th width="10%">&nbsp;</th>
+        <th width="10%" class="tablehead">$i18n.getString( "user.username.label" )</th>
+        <th width="10%" class="tablehead">$i18n.getString( "user.fullName.label" )</th>
+        <th width="10%" class="tablehead">$i18n.getString( "user.email.label" )</th>
+        <th width="10%" class="tablehead">$i18n.getString( "user.groupName.label" )</th>
+        <th width="10%" class="tablehead">&nbsp;</th>
       </tr>
       #foreach ( $user in $items )
       <tr class="$css.nextClass">
@@ -35,6 +36,7 @@ $page.setTitle( "Continuum - User Management" )
         </td>
       </tr>
       #end
+      </tbody>
     </table>
     #if ( $continuum.security.isAuthorized( $c1user, "manageUsers" ) )
     <div class="functnbar3">
