[CONTINUUM-603] Fix date parsing in changeset in buil result screen
git-svn-id: https://svn.apache.org/repos/asf/maven/continuum/branches/continuum-1.0.x@380281 13f79535-47bb-0310-9956-ffa450edef68

--- a/continuum-web/src/main/resources/templates/screens/ProjectBuild.vm
+++ b/continuum-web/src/main/resources/templates/screens/ProjectBuild.vm
@@ -1,4 +1,4 @@
-$page.setTitle( "Continuum - ${project.name} Build at $date.format('medium',$build.startTime)" )
+$page.setTitle( "Continuum - Continuum Web Build at $date.format('medium',$build.startTime)" )
 
 #if ( $data.user )
   #set ( $c1user = $continuum.getUser( $data.user.userId ) )
@@ -68,7 +68,7 @@ $page.setTitle( "Continuum - ${project.name} Build at $date.format('medium',$bui
       #foreach ( $changeSet in $build.scmResult.changes )
       <tr class="a">
         <td>#if ($changeSet.author) $changeSet.author #end</td>
-        <td>#if ($changeSet.date > 0) $date.format('medium',$changeSet.date) #end</td>
+        <td>#if ($changeSet.dateAsDate) $date.format('medium',$changeSet.dateAsDate) #end</td>
         <td>#if ($changeSet.comment) $changeSet.comment #end</td>
         <td>
           #foreach ( $file in $changeSet.files )
