[CONTINUUM-469] Allow build output to be downloaded as text
git-svn-id: https://svn.apache.org/repos/asf/maven/continuum/branches/continuum-1.0.x@384875 13f79535-47bb-0310-9956-ffa450edef68

--- a/continuum-web/src/main/resources/templates/screens/ProjectBuild.vm
+++ b/continuum-web/src/main/resources/templates/screens/ProjectBuild.vm
@@ -117,6 +117,8 @@ $page.setTitle( "Continuum - Continuum Web Build at $date.format('medium',$build
   <h3>Output</h3>
   <div class="axial">
   #if ( $output && $output != "" )
+    <a href="$requestUtil.getContextPath()/servlet/browse?file=$requestUtil.getParameter('id')/${requestUtil.getParameter('buildId')}.log.txt">Download as text</a>
+    <br><br>
     <div style="width:100%; height:500px; overflow:auto; border-style: solid; border-width: 1px">
       <code><pre>$output</pre></code>
     </div>
