[CONTINUUM-412] Add 'Build Now' link for each build definition in project view
git-svn-id: https://svn.apache.org/repos/asf/maven/continuum/branches/continuum-1.0.x@385807 13f79535-47bb-0310-9956-ffa450edef68

--- a/continuum-web/src/main/resources/templates/screens/View.vm
+++ b/continuum-web/src/main/resources/templates/screens/View.vm
@@ -99,13 +99,17 @@ $page.setTitle( "Continuum - Project View: ${item.name}" )
         </td>
         <td>Project</td>
         <td>
+          #if ( $continuum.security.isAuthorized( $c1user, "buildProject" ) )
+            #set ( $buildNowLink = $link.addPathInfo('action', 'cam').addPathInfo('cid','buildProjectWithBuildDefinition').addPathInfo('id', $item.id).addPathInfo('buildDefinitionId', $buildDefinition.id) )
+            <a href="$buildNowLink">Build Now</a> |
+          #end
           #if ( $continuum.security.isAuthorized( $c1user, "editBuildDefinition" ) )
-          #set ( $buildDefinitionLink = $link.setPage('BuildDefinition.vm').addPathInfo('view','BuildDefinition').addPathInfo('buildDefinitionId', $buildDefinition.id).addPathInfo('id', $item.id) )
-          <a href="$buildDefinitionLink">Edit</a> |
+            #set ( $buildDefinitionLink = $link.setPage('BuildDefinition.vm').addPathInfo('view','BuildDefinition').addPathInfo('buildDefinitionId', $buildDefinition.id).addPathInfo('id', $item.id) )
+            <a href="$buildDefinitionLink">Edit</a> |
           #end
           #if ( $continuum.security.isAuthorized( $c1user, "deleteBuildDefinition" ) )
-          #set ( $deleteBuildDefinitionLink = $link.setPage('DeleteBuildDefinition.vm').addPathInfo('buildDefinitionId', $buildDefinition.id).addPathInfo('id', $item.id).addPathInfo('executorId', $item.executorId) )
-          <a href="$deleteBuildDefinitionLink">Delete</a>
+            #set ( $deleteBuildDefinitionLink = $link.setPage('DeleteBuildDefinition.vm').addPathInfo('buildDefinitionId', $buildDefinition.id).addPathInfo('id', $item.id).addPathInfo('executorId', $item.executorId) )
+            <a href="$deleteBuildDefinitionLink">Delete</a>
           #end
         </td>
       </tr>
